app/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@sample2.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/sample2.json
---
[
    "Transfer": "Transaction",
    "Transfer": "0.000012345 METAL to ",
    "Address": "tahoe12yp9cc0melq83a5nxnurf0nd6fk4t224mfhqcr",
    "Fee(METAL)": "0.123444444",
]
