app/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@sample_fuji.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/sample_fuji.json
---
[
    "Transfer": "Transaction",
    "Transfer": "0.000001 METAL to ",
    "Address": "tahoe10an3cucdfqru984pnvv6y0rspvvclz63juzap4",
    "Transfer": "0.006999 METAL to ",
    "Address": "tahoe15jh6hlessx2jtxvs48jnr0vzxrg34x32tx5dya",
    "Fee(METAL)": "0.001",
]
