app/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@sample_fuji2.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/sample_fuji2.json
---
[
    "Transfer": "Transaction",
    "Transfer": "0.000001 METAL to ",
    "Address": "tahoe10an3cucdfqru984pnvv6y0rspvvclz63juzap4",
    "Transfer": "0.006999 METAL to ",
    "Address": "tahoe179xfr036ym3uuv8ewrv8y4la97ealwmlwjth4x",
    "Fee(METAL)": "0.001",
]
