app/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@simple_transfer.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/simple_transfer.json
---
[
    "Transfer": "Transaction",
    "Transfer": "0.000001 METAL to ",
    "Address": "tahoe10an3cucdfqru984pnvv6y0rspvvclz63juzap4",
    "Transfer": "0.006999 METAL to ",
    "Address": "tahoe1qd2hdzdkjt23y6tw5km54ehpygl8upy22wnvf8",
    "Fee(METAL)": "0.001",
]
