app/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@x_operation.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/x_operation.json
---
[
    "Operation": "Transaction",
    "Transfer": "0.000012345 METAL to ",
    "Address": "tahoe1cv6yz28qvqfgah34yw3y53su39p6kzzes5cjy5",
    "Op. Type:": "NFTTransferOperation",
    "GroupID: ": "12345",
    "Payload: ": "0xe8bf99e698afe4bb80e4b988e4b88defbc8ce982a3e4b88de6...",
    "Owner: ": "1cv6yz28qvqfgah34yw3y53su39p6kzzend8lmd",
    "Fee(METAL)": "0.123444444",
]
